<resources>
    <string name="app_name">Flashcards</string>
    <string name="editDeckItem">Edit</string>
    <string name="studyDeckItem">Study</string>
    <string name="deleteDeck">Delete</string>
    <string name="addCardToDeck">Add</string>
    <string name="itemCardDefaultText">Card Text Template</string>
    <string name="editItemCard">E</string>
    <string name="removeItemCard">R</string>
    <string name="flashcardImageContentDescription">Flashcard Image</string>
    <string name="flashcardPlaceholderText">FlashCard Placeholder Text</string>
    <string name="flashcardWrongBtnText">X</string>
    <string name="flashcardFlipBtnText">Flip</string>
    <string name="flashcardCorrectBtnText">V</string>
    <string name="inspectCardFrontLabel">Frente:</string>
    <string name="inspectCardBackLabel">Verso</string>
    <string name="inspectCardImageContentDescription">FLashcard Image</string>
    <string name="confirmInspectCardBtn">Confirm</string>
    <string name="removeInspectCardBtn">Remove</string>
    <string name="cancelInspectCardBtn">Cancel</string>
    <string name="inspectCardRemoveImage">Remove</string>
    <string name="inspectCardGalleryImage">Gallery</string>
    <string name="inspectCardCameraImage">Camera</string>
    <string name="decksListTitle">Baralhos:</string>
    <string name="BtnAddDeck">Add</string>
    <string name="hintAddNewDeck">Nome do Baralho</string>
    <string name="deleteDeckItem">Delete Deck</string>
    <string name="AvisoCamposVazios">Preencha os campos</string>
    <string name="btnInspectCardRemoveImage">Remove Image</string>
    <string name="btnInspectCardAddPhoto">Add Photo</string>
    <string name="btnInspectCardAddGalleryImage">Add Image From Gallery</string>
</resources>