<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="5dp"
    >

    <TextView
        android:id="@+id/tv_ItemDeckName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="50dp"
        android:text="@string/app_name"
        android:gravity="center_vertical"
        android:paddingHorizontal="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="#4477ff"
        />
    <LinearLayout
        android:id="@+id/ll_ItemDeckActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ItemDeckName"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:background="@color/black"
        android:visibility="visible"
        android:paddingVertical="2dp"
        >
        <ImageButton
            android:id="@+id/btn_DeleteItemDeck"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_material_delete"
            android:contentDescription="@string/deleteDeckItem" />
        <ImageButton
            android:id="@+id/btn_EditItemDeck"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_material_edit"
            android:contentDescription="@string/editDeckItem" />
        <ImageButton
            android:id="@+id/btn_StudyItemDeck"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_material_play"
            android:contentDescription="@string/studyDeckItem"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>