<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudyDeckActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:padding="50dp"
        android:maxWidth="900dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/iv_flashcardImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="#999999"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/flashcardImageContentDescription"
                />
            <TextView
                android:id="@+id/tv_flashcardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flashcardPlaceholderText"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <ImageButton
                android:id="@+id/btn_flashcardWrongBtn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:contentDescription="@string/flashcardWrongBtnText"
                android:src="@drawable/ic_material_close"
                android:background="@color/red"
                app:tint="@color/white" />
            <ImageButton
                android:id="@+id/btn_flashcardFlipBtn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:contentDescription="@string/flashcardFlipBtnText"
                android:src="@drawable/ic_material_flip"
                android:background="@color/main_blue"
                app:tint="@color/white" />
            <ImageButton
                android:id="@+id/btn_flashcardCorrectBtn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:contentDescription="@string/flashcardCorrectBtnText"
                android:src="@drawable/ic_material_check"
                android:background="@color/green"
                app:tint="@color/white" />
            <ImageButton
                android:id="@+id/btn_flashcardEndBtn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:contentDescription="@string/flashcardCorrectBtnText"
                android:src="@drawable/ic_material_check"
                android:background="@color/main_blue"
                app:tint="@color/white" />
                />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>