<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decksListTitle"
            android:padding="10dp"
            android:textSize="20sp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_DeckList"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@color/dark_blue"
            >
            <EditText
                android:id="@+id/et_AddNewDeck"
                android:minHeight="50dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_marginEnd="10dp"
                android:hint="@string/hintAddNewDeck"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                />
            <ImageButton
                android:id="@+id/btn_AddNewDeck"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/BtnAddDeck"
                android:src="@drawable/ic_material_add"
                android:background="@color/green"
                app:tint="@color/white" />
        </LinearLayout>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>